@@ -316,6 +316,30 @@ argument_list|(
 literal|"A A X A X B A X B B A A X B A A"
 argument_list|)
 decl_stmt|;
+DECL|field|DOC_5_3
+specifier|private
+specifier|static
+specifier|final
+name|Document
+name|DOC_5_3
+init|=
+name|makeDocument
+argument_list|(
+literal|"H H H X X X H H H X X X H H H"
+argument_list|)
+decl_stmt|;
+DECL|field|DOC_5_4
+specifier|private
+specifier|static
+specifier|final
+name|Document
+name|DOC_5_4
+init|=
+name|makeDocument
+argument_list|(
+literal|"H H H H"
+argument_list|)
+decl_stmt|;
 DECL|field|QUERY_1
 specifier|private
 specifier|static
@@ -350,6 +374,18 @@ init|=
 name|makePhraseQuery
 argument_list|(
 literal|"X A A"
+argument_list|)
+decl_stmt|;
+DECL|field|QUERY_5_4
+specifier|private
+specifier|static
+specifier|final
+name|PhraseQuery
+name|QUERY_5_4
+init|=
+name|makePhraseQuery
+argument_list|(
+literal|"H H H H"
 argument_list|)
 decl_stmt|;
 comment|/**    * Test DOC_4 and QUERY_4.    * QUERY_4 has a fuzzy (len=1) match to DOC_4, so all slop values> 0 should succeed.    * But only the 3rd sequence of A's in DOC_4 will do.    */
@@ -709,6 +745,93 @@ operator|>
 name|score1
 argument_list|)
 expr_stmt|;
+block|}
+block|}
+comment|/** LUCENE-3412 */
+DECL|method|testDoc5_Query5_Any_Slop_Should_be_consistent
+specifier|public
+name|void
+name|testDoc5_Query5_Any_Slop_Should_be_consistent
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|int
+name|nRepeats
+init|=
+literal|5
+decl_stmt|;
+for|for
+control|(
+name|int
+name|slop
+init|=
+literal|0
+init|;
+name|slop
+operator|<
+literal|3
+condition|;
+name|slop
+operator|++
+control|)
+block|{
+for|for
+control|(
+name|int
+name|trial
+init|=
+literal|0
+init|;
+name|trial
+operator|<
+name|nRepeats
+condition|;
+name|trial
+operator|++
+control|)
+block|{
+comment|// should steadily always find this one
+name|checkPhraseQuery
+argument_list|(
+name|DOC_5_4
+argument_list|,
+name|QUERY_5_4
+argument_list|,
+name|slop
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+block|}
+for|for
+control|(
+name|int
+name|trial
+init|=
+literal|0
+init|;
+name|trial
+operator|<
+name|nRepeats
+condition|;
+name|trial
+operator|++
+control|)
+block|{
+comment|// should steadily never find this one
+name|checkPhraseQuery
+argument_list|(
+name|DOC_5_3
+argument_list|,
+name|QUERY_5_4
+argument_list|,
+name|slop
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 DECL|method|checkPhraseQuery
